# SimpleMem

./: .gitignore  README.md  notes.md  pyproject.toml  sample_server.py
MCP/: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README_PACKAGE.md  USAGE_FROM_GIT.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
MCP/config/: settings.py
MCP/examples/: mount_in_fastapi.py
MCP/frontend/: app.js  index.html
MCP/server/: __init__.py  __main__.py  app_factory.py  http_server.py  mcp_handler.py
MCP/server/auth/: models.py
MCP/server/core/: answer_generator.py  memory_builder.py  retriever.py
MCP/server/database/: user_store.py  vector_store.py
MCP/server/integrations/: __init__.py  litellm.py
