[project]
name = "simplemem"
version = "0.1.0"
description = "Efficient Lifelong Memory for LLM Agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Jiaqi Liu" },
    { name = "Yaofeng Su" },
    { name = "Peng Xia" },
]

dependencies = [
    # LLM client
    "openai>=1.0.0",

    # Vector database + full-text search
    "lancedb>=0.4.0",
    "pyarrow>=14.0.0",
    "pylance>=0.9.0",
    "tantivy",

    # Embeddings
    "sentence-transformers>=2.2.0",

    # Data validation
    "pydantic>=2.5.0",

    # Utilities
    "dateparser>=1.2.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.60.0",

    # Cross-session memory API
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.0.0",
]

eval = [
    "nltk>=3.8.0",
    "bert-score>=0.3.13",
    "rouge-score>=0.1.2",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
]

mcp = [
    "mcp>=1.0.0",
    "httpx>=0.26.0",
    "PyJWT>=2.8.0",
    "cryptography>=41.0.0",
]

dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
