[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simplemem-mcp"
version = "1.0.1"
description = "Multi-tenant Memory Service for LLM Agents via MCP Protocol"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "SimpleMem Team"}
]
keywords = ["mcp", "llm", "memory", "agent", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "openai>=1.0.0",
    "lancedb>=0.4.0",
    "pyarrow>=14.0.0",
    "pandas>=2.0.0",
    "PyJWT>=2.8.0",
    "cryptography>=41.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
simplemem-mcp = "simplemem_mcp.__main__:main"

[tool.setuptools]
packages = ["simplemem_mcp", "config"]

[tool.setuptools.package-dir]
simplemem_mcp = "server"

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]
